[gd_scene load_steps=9 format=3 uid="uid://i2udqkqkksy4"]

[ext_resource type="Script" path="res://02_scenes/04_screens/pause_screen.gd" id="1_nh62t"]
[ext_resource type="Theme" uid="uid://pd8stp4u7wqj" path="res://03_themes/gameTheme.tres" id="2_dm7q6"]
[ext_resource type="FontFile" uid="uid://db6d2d1an2lbk" path="res://01_assets/02_fonts/DotGothic16-Regular.ttf" id="2_l8hfc"]
[ext_resource type="Texture2D" uid="uid://cu0ysk1hot2cl" path="res://01_assets/01_sprites/01_interfaces/pauseSprite.png" id="3_kjorr"]
[ext_resource type="Texture2D" uid="uid://d0y3jlsgqxfpq" path="res://01_assets/01_sprites/01_interfaces/menuIcon.png" id="4_bktbj"]
[ext_resource type="Texture2D" uid="uid://clep2e2npjqqk" path="res://01_assets/01_sprites/01_interfaces/controlsIcon.png" id="5_vmsag"]
[ext_resource type="Texture2D" uid="uid://dgv15cpoy7k6a" path="res://01_assets/01_sprites/01_interfaces/leftIcon.png" id="6_0104u"]
[ext_resource type="Texture2D" uid="uid://d0enab65usedi" path="res://01_assets/01_sprites/01_interfaces/Titulo 2.png" id="8_ju8tu"]

[node name="pauseScreen" type="CanvasLayer"]
script = ExtResource("1_nh62t")

[node name="background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0, 0, 0, 0.231373)

[node name="textoPausa" type="Label" parent="."]
offset_left = 235.0
offset_top = 103.0
offset_right = 402.0
offset_bottom = 227.0
theme = ExtResource("2_dm7q6")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 43
text = "Pausa"
horizontal_alignment = 1

[node name="pauseSprite" type="TextureRect" parent="."]
offset_left = 180.0
offset_right = 428.24
offset_bottom = 459.0
texture = ExtResource("3_kjorr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 270.0
offset_top = 150.0
offset_right = 338.0
offset_bottom = 358.0

[node name="bMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_dm7q6")
theme_override_fonts/font = ExtResource("2_l8hfc")
text = "
"
icon = ExtResource("4_bktbj")
icon_alignment = 1

[node name="bControles" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_dm7q6")
theme_override_fonts/font = ExtResource("2_l8hfc")
text = "
"
icon = ExtResource("5_vmsag")
icon_alignment = 1

[node name="bVolver" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_dm7q6")
theme_override_fonts/font = ExtResource("2_l8hfc")
text = "
"
icon = ExtResource("6_0104u")
icon_alignment = 1

[node name="title" type="TextureRect" parent="."]
offset_left = 111.0
offset_top = 51.0
offset_right = 270.0
offset_bottom = 121.0
rotation = -0.0314159
texture = ExtResource("8_ju8tu")
expand_mode = 1

[node name="pausa" type="Label" parent="title"]
offset_left = 28.8915
offset_top = 3.90943
offset_right = 128.891
offset_bottom = 65.9094
theme = ExtResource("2_dm7q6")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 40
text = "Pausa"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/bMenu" to="." method="_on_b_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/bControles" to="." method="_on_b_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/bVolver" to="." method="_on_b_volver_pressed"]
